Start to build out the APIs for loading the meal plan
