# MealPlan.Application/MealPlan/Queries/GetMealPlan/GetMealPlanRequest.cs
@@ -1,0 +1,10 @@
+﻿using MealPlan.Models;
+using MediatR;
+
+namespace MealPlan.Application.MealPlan.Queries.GetMealPlan;
+
+public class GetMealPlanRequest: IRequest<IEnumerable<MealPlanEntry>>
+{
+    public DateOnly StartDate { get; set; }
+    public DateOnly EndDate { get; set; }
+}
