# MealPlan/DTOs/MealPlan/MealPlanDto.cs
@@ -1,0 +1,5 @@
+﻿namespace MealPlan.DTOs.MealPlan;
+
+public class MealPlanDto
+{
+}
